# text-analysis-platform

./: .env  .gitignore  README.md  auth.db  claude.md  docker-compose.yaml  hello.py  promtail-config.yml  pyproject.toml  start.sh  stop.sh  tempo-config.yaml
.github/workflows/: build-and-push.yml
grafana-provisioning/datasources/: loki.yaml  tempo.yaml
k6-tests/: fetch_texts.py  load-test-preprocessing.js  load-test.js  populate_datasets.py  register-users.js
kubernetes/: gateway-deployment.yaml  namespace.yaml  preprocessing-deployment.yaml  sentiment-analysis-deployment.yaml  summarization-deployment.yaml
services/auth/: Dockerfile  app.py  auth.db  config.py  crud.py  database.py  models.py  pyproject.toml  routes.py  schemas.py  security.py  utils.py
services/gateway/: Dockerfile  app.py  metrics.py  prometheus.yml  routes.py  schemas.py  settings.py  utils.py
services/preprocessing/: Dockerfile  app.py  gunicorn.conf.py  models.py  pyproject.toml
services/preprocessing/src/: app.py  cache.py  core.py  logger.py  routes.py
services/sentiment-analysis/: Dockerfile  pyproject.toml
services/sentiment-analysis/src/: app.py  models.py  utils.py
services/sentiment_analysis/: Dockerfile  app.py
services/summarization/: Dockerfile  app.py  endpoints.py  models.py  summarizer.py
shared/: download_model.py  logger.py
texts/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+960 more)
