[project]
name = "text-analysis-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "numpy>=2.2.6",
    "optimum[onnxruntime]>=1.26.1",
    "prometheus-client>=0.22.0",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.5",
    "python-jose[cryptography]>=3.5.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.41",
    "structlog>=25.3.0",
    "torch>=2.7.0",
    "transformers>=4.52.3",
    "uvicorn>=0.34.2",
]
