[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [ "src/" ]

[project]
name = "preprocessing"
version = "0.1.0"
description = "Service for preprocessing text data"
requires-python = ">=3.13.2"
dependencies = [
    "fastapi>=0.115.12",
    "structlog>=25.3.0",
    "uvicorn>=0.34.2",
]