[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [ "src/" ]

[project]
name = "sentiment_analysis"
version = "0.1.0"
description = "Service for performing sentiment analysis on text data"
requires-python = ">=3.13.2"
dependencies = [
    "fastapi>=0.115.12",
    "structlog>=25.3.0",
    "uvicorn>=0.34.2",
    "transformers>=4.52.3",
    "onnxruntime>=1.22.0",
]
